# self-learning-ai

./: .gitignore  README.md  app.py  index.html  pyproject.toml  requirements.txt
.github/workflows/: learn.yml  train.yml
docker/: Dockerfile  Dockerfile.web  docker-compose.web.yml  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  OVERVIEW.md  README.md
examples/: __init__.py  basic_usage.py  cli.py  integrations.py
src/: __init__.py  learning_core.py  main.py
src/agents/: __init__.py  base.py  code_agent.py  report_agent.py  research_agent.py  safety_controller.py  testing_agent.py  training_agent.py
src/config/: __init__.py
src/memory/: __init__.py
src/sandbox/: __init__.py
src/web/: README.md  __init__.py  app.py
src/web/templates/: chat.html
templates/: __init__.py  chat.html
tests/: __init__.py  test_agents.py  test_core.py  test_sandbox.py
