[project]
name = "self-learning-ai"
version = "0.1.0"
description = "A controlled autonomous AI agent from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
